@@ -15,6 +15,10 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 5.0b1
 -------------------
 
+10/10/14
+    - Added 'sqp' algorithm option for fmincon.alg, not suitable
+      for large problems.
+
 10/7/14
     - Added toggle_softlims(), an extension to implement DC OPF
       branch flow soft limits. This should be useful in identifying
